--- a/app/src/main/res/layout/fragment_review_write.xml
+++ b/app/src/main/res/layout/fragment_review_write.xml
@@ -55,7 +55,7 @@
 					style="@style/Typography.Regular"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:text="Date of visit 2021.02.03"
+					android:text="@{viewModel.checkInItem.date}"
 					android:textColor="@color/gray500"
 					android:textSize="16dp"
 					tools:text="2021.02.03" />
@@ -69,6 +69,7 @@
 						android:layout_width="60dp"
 						android:layout_height="60dp"
 						android:layout_marginTop="8dp"
+						imageUrl="@{viewModel.checkInItem.image}"
 						android:background="@color/gray500"
 						app:layout_constraintStart_toStartOf="parent"
 						app:layout_constraintTop_toTopOf="parent" />
@@ -80,7 +81,7 @@
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:layout_marginStart="10dp"
-						android:text="category"
+						android:text="@{viewModel.checkInItem.category}"
 						android:textColor="@color/gray100"
 						android:textSize="14dp"
 						app:layout_constraintBottom_toTopOf="@id/tv_store_name"
@@ -96,7 +97,7 @@
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:layout_marginTop="8dp"
-						android:text="iotle"
+						android:text="@{viewModel.checkInItem.storeName}"
 						android:textColor="@color/white"
 						android:textSize="24dp"
 						app:layout_constraintBottom_toBottomOf="@id/iv_store"
