--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -26,29 +26,47 @@
 			android:textSize="16dp"
 			tools:text="CAFE" />
 
-		<androidx.appcompat.widget.LinearLayoutCompat
+
+		<HorizontalScrollView
 			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_marginTop="12dp"
-			android:orientation="horizontal">
+			android:layout_height="wrap_content">
 
-			<ImageView
-				android:layout_width="106dp"
-				android:layout_height="106dp"
-				android:background="@color/gray500" />
+			<androidx.appcompat.widget.LinearLayoutCompat
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginTop="12dp"
+				android:orientation="horizontal">
 
-			<ImageView
-				android:layout_width="106dp"
-				android:layout_height="106dp"
-				android:layout_marginStart="1dp"
-				android:background="@color/gray500"/>
+				<ImageView
 
-			<ImageView
-				android:layout_width="106dp"
-				android:layout_height="106dp"
-				android:layout_marginStart="1dp"
-				android:background="@color/gray500"/>
-		</androidx.appcompat.widget.LinearLayoutCompat>
+					imageUrlVisible="@{item.getImageN(1)}"
+					android:layout_width="106dp"
+					android:layout_height="106dp"
+					android:layout_marginStart="1dp"
+					android:background="@color/gray500" />
+
+				<ImageView
+					imageUrlVisible="@{item.getImageN(2)}"
+					android:layout_width="106dp"
+					android:layout_height="106dp"
+					android:layout_marginStart="1dp"
+					android:background="@color/gray500" />
+
+				<ImageView
+					imageUrlVisible="@{item.getImageN(3)}"
+					android:layout_width="106dp"
+					android:layout_height="106dp"
+					android:layout_marginStart="1dp"
+					android:background="@color/gray500" />
+
+				<ImageView
+					imageUrlVisible="@{item.getImageN(4)}"
+					android:layout_width="106dp"
+					android:layout_height="106dp"
+					android:layout_marginStart="1dp"
+					android:background="@color/gray500" />
+			</androidx.appcompat.widget.LinearLayoutCompat>
+		</HorizontalScrollView>
 
 		<TextView
 			style="@style/Typography.SemiBold"
