디자인수정

--- a/app/src/main/res/layout/fragment_review_write.xml
+++ b/app/src/main/res/layout/fragment_review_write.xml
@@ -12,12 +12,13 @@
 	</data>
 
 	<androidx.core.widget.NestedScrollView
+		android:background="@color/gray900"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content">
 
 		<androidx.appcompat.widget.LinearLayoutCompat
 			android:layout_width="match_parent"
-			android:layout_height="match_parent"
+			android:layout_height="wrap_content"
 			android:layout_gravity="bottom"
 			android:background="@color/gray900"
 			android:clickable="true"
@@ -121,8 +122,7 @@
 					android:layout_height="wrap_content"
 					android:text="@string/photo"
 					android:textColor="@color/gray100"
-					android:textSize="16dp"
-					tools:text="CAFE" />
+					android:textSize="16dp" />
 
 				<ImageView
 					android:layout_width="100dp"
@@ -131,6 +131,7 @@
 					android:src="@drawable/ic_add_img" />
 
 				<androidx.appcompat.widget.LinearLayoutCompat
+					android:visibility="gone"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:layout_marginTop="12dp"
@@ -196,16 +197,18 @@
 					app:layout_constraintEnd_toEndOf="parent"
 					app:layout_constraintStart_toStartOf="parent"
 					app:layout_constraintTop_toBottomOf="@id/tv_review_title" />
+
 			</androidx.constraintlayout.widget.ConstraintLayout>
 
 			<TextView
+				android:id="@+id/btn_save"
 				style="@style/Typography.Bold"
 				android:layout_width="match_parent"
 				android:layout_height="56dp"
 				android:layout_marginStart="20dp"
 				android:layout_marginEnd="20dp"
 				android:layout_marginBottom="20dp"
-				android:background="@drawable/btn_active"
+				android:background="@drawable/bg_gradient"
 				android:gravity="center"
 				android:text="@string/save"
 				android:textColor="@color/black"
