--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -21,6 +21,7 @@
 		android:weightSum="3">
 
 		<androidx.appcompat.widget.LinearLayoutCompat
+			android:visibility="gone"
 			android:layout_width="match_parent"
 			android:layout_height="215dp"
 			android:background="@drawable/border_bottom"
